# gimnasio-2.0

./: .gitignore  Dockerfile  app_test.py  app_web.py  crear_datos_iniciales.py  crear_datos_manual.py  crear_datos_prueba.py  crear_datos_simulados.py  fly.toml  gimnasio.db  gimnasio_limpio.db  gym_clean.db  inicializar_datos.py  koyeb.yaml  main.py  main_completo.py  main_completo_final.py  main_dañado_por_qwen.py  main_minimo.py  main_ultra_robusto.py  notificaciones.py  pyproject.toml  render.yaml  requirements.txt  temp.db  verificar_api.py
